force-app/main/default/objects/Account/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RT Nagar</fullName>
            </value>
            <value>
                <fullName>Sanjaynagara - Vicinity</fullName>
            </value>
            <value>
                <fullName>Sultan Palya</fullName>
            </value>
            <value>
                <fullName>New Bel Rd</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>