force-app/main/default/objects/Account/fields/First_Date_Visited__c.field-meta.xml
<CustomField>
    <fullName>First_Date_Visited__c</fullName>
    <label>First Date Visited</label>
    <type>Date</type>
</CustomField>