force-app/main/default/objects/Account/fields/Follow_Up_History__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_History__c</fullName>
    <label>Follow Up History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>