force-app/main/default/objects/Account/fields/GSTIN__c.field-meta.xml
<CustomField>
    <fullName>GSTIN__c</fullName>
    <label>GSTIN</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>