force-app/main/default/objects/Account/fields/Locality__c.field-meta.xml
<CustomField>
    <fullName>Locality__c</fullName>
    <inlineHelpText>Neighbourhood or locality, as typed by the client when they registered on the website. Free text, unlike Area which is a fixed list of our own delivery zones.</inlineHelpText>
    <label>Locality</label>
    <length>100</length>
    <type>Text</type>
</CustomField>