force-app/main/default/objects/Account/fields/Map_Location__c.field-meta.xml
<CustomField>
    <fullName>Map_Location__c</fullName>
    <label>Map Location</label>
    <type>Url</type>
</CustomField>