force-app/main/default/objects/Account/fields/Phone_Digits__c.field-meta.xml
<CustomField>
    <fullName>Phone_Digits__c</fullName>
    <externalId>true</externalId>
    <label>Phone Digits</label>
    <length>15</length>
    <type>Text</type>
</CustomField>