force-app/main/default/objects/Account/fields/Send_Order_FollowUp__c.field-meta.xml
<CustomField>
    <fullName>Send_Order_FollowUp__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When on, this client receives the automated 21-day "no order" WhatsApp re-order reminder (Wednesdays &amp; Sundays). Turn off to stop those messages for a specific client.</description>
    <inlineHelpText>On = send WhatsApp order follow-ups to this client. Off = never send them.</inlineHelpText>
    <label>Send WhatsApp Follow-Ups</label>
    <type>Checkbox</type>
</CustomField>