force-app/main/default/objects/Account/fields/Unique_Business_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_Business_Code__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Login code the client uses on the website. First 3 letters of the account name plus the first 5 digits of the phone. Generated once when the account is created and never changed after, because it has already been sent to the client.</inlineHelpText>
    <label>Unique Business Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>