force-app/main/default/objects/Account/fields/UPI_Payer_Name__c.field-meta.xml
<CustomField>
    <fullName>UPI_Payer_Name__c</fullName>
    <description>Payer name as it appears in the bank's UPI credit alert (e.g. VIKRAM K). Learned from the first matched payment; used to match later payments even when amounts collide.</description>
    <inlineHelpText>Name shown in the Axis credit alert when this client pays by UPI. Filled in automatically after the first matched payment; edit if it changes.</inlineHelpText>
    <label>UPI Payer Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>